--- a/style.css
+++ b/style.css
@@ -1,89 +1,3 @@
-/*
-body{
-    
-    background-color: rgb(32, 30, 30);
-}
-
-.faqs{
-    max-width: 600px;
-    margin: 0 auto;
-    
-}
-
-.faqs .questions{
-    box box-shadow: ;
-}
-
-h2{
-    padding: 10px 80px ;
-   
-}
-
-.faq-header{
-    width: 100%;
-    outline-color: transparent;
-    padding: 20px;
-    font-size: 15px;
-    display: flex;
-    background-color: #7c1010;
-    color: #c7c2c2;
-    align-items: center;
-    position: relative;
-    cursor: pointer;
-    
-}
-
-.close {
-    position: absolute;
-    right: 8%;
-    padding: -2,0px;
-    font-weight: bold;
-    transform: translateY(px);
-    opacity: 1;
-    transition:  1s;
-    float: right;
-    
-}
-.open {
-    position: absolute;
-    right: 8%;
-    padding: 0px;
-    font-weight: bold;
-    transform: translateY();
-    opacity: 1;
-    transition:all 1s;
-}
-
-.open.active{
-    opacity: 1;
-    transform: translateY(0);
-}
-
-.close.active{
-    opacity: 1;
-    transform: translateY(0);
-}
-
-h3{
-    font-size: 20px;
-    padding: 5px 40px;
-}
-
-.ans-content{
-    padding: 0px 20px;
-    color: azure;
-    line-height: 2;
-    max-height: 0;
-    overflow: hidden;
-    
-}
-.ans-content{
-    opacity: 1;
-    transform: translateY(0);
-
-}
-*/
-
 body{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #000000;
@@ -102,7 +16,8 @@ body h2{
 button{
     background-color: #690a0a;
 }
-.accordion {
+
+.question {
     color: #c2bdbd;
     cursor: pointer;
     padding: 12px;
@@ -115,13 +30,14 @@ button{
     display: flex;
     position: relative;
     align-items: center;
-  }
+}
   
-  .active, .accordion:hover {
+.active, .question:hover {
     background-color: #c51c1c; 
   }
   
-  .panel {
+
+.answer {
     font-size: 17px;
     color:#a7a1a1;
     margin-right: 0px;
@@ -131,13 +47,7 @@ button{
     overflow: hidden;
     width: 50%;
   }
-
-.image-area {
-    width: -5000px;
-    height: 800px;
-  }
   
-
 
 section{
     width: 100%;
@@ -153,64 +63,9 @@ section::before{
     width: 50%;
     height: 900px;
     background-color: #6d3636;
-    z-index: ;
+    z-index: 0;
 
 }
-
-.form-area{
-    position:relative ;
-    min-width: 0px;
-    min-height: 5px;
-    display: flex;
-    justify-content: center;
-    height: 600px;
-    width: 900px;
-    top: 100px;
-    left: 100px;
-
-    
-}
-
-.contacts{
-    width: 40%;
-    top: 20px;
-    height: 500px;
-    right: 550px;
-    background-color: #b9211b;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    justify-content: space-between;
-    position: absolute;
-    box-shadow: 0 20px 25px rgba(0, 0, 0, 0.35);
-   z-index:     1;
-   color: #fff;
-
-}
-
-.contacts, h2{
-    color: #ffffff;
-    display: block;
-    font-size: 20px;
-    
-}
-
-.contacts, ul{
-    position: absolute;
-    margin: 0px 0px;
-}
-
-.contacts, ul li{
-    margin: 40px;
-    list-style: none;
-    cursor: pointe;
-}
-
-
-
-
-
-
 .message{
     position: absolute;
     padding: 70px 50px;
@@ -218,49 +73,72 @@ section::before{
     margin-left: 150px;
     height: 360px;
     background-color: white;
-    width: 600px;
+    width: 50px;
     
 }
-
 .message h2{
     display: flex;
     justify-content: center;
     color: #000;
 }
 
-.formbox{
-    position: relative;
+
+
+.form-center{
     display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+    justify-content: center;
 }
-
-.boxsmall{
-    margin: 20px;
-
-}
-
-.boxsmall.w50 input{
-    width: 250px;
-    border-radius: 4px;
-    background-color: #f3f2f1;
+.container form{
+    position: relative;
+    margin: 5%;
+    padding: 10px;
+    bottom: 1px;
+    align-items: center;
+    background-color: #fff;
+    border-radius: 10px;
+    width: 570px;
     
 }
+
+
+
+.container form h2{
+    position: relative;
+    background-color: #b9211b;
+
+    
+}
+
+.container form h3{
+    padding: px;
+    margin-bottom: 0px;
+    margin-top: 30px;
+    color: #0f0704;
+    font-family:'Times New Roman', Times, serif;
+}
+
+
 input{
+    height: 30px;
     outline: none;
     border-top: 1px;
     border-right: 1px;
     border-left: 1px;
+    width: 90%;
+    border-radius: 5px;
+    background-color: #e6e6e6;
 }
 
 textarea{
     height: 100px;
-    width: 250px ;
+    width: 350px ;
+    border-radius: 5px;
     
 }
 
-.formbox button{
-    margin: 60px;
+.container button{
+   
+    margin: 6px;
     height: 50px;
     width: 150px;
     border-radius: 10px;
@@ -269,70 +147,7 @@ textarea{
     border-width: 0px;
     background-color: #b9211b;
 }
-.formbox button:hover{
-    background-color: #6d3636;
+.container button:hover{
+    background-color: #477e96;
     color: #fff;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-.fa{
-    font-size: 50px;
-    color: #000000;
-
-
-}
-
-.fa-facebook {
-    background: #3B5998;
-    color: white;
-  }
-
-
-
-
-
-/*
-.container{
-    width: 100%;
-    background-color: #690a0;
-    height: 100px;
-
-}
-
-.in-container{
-    width: 50%;
-    background-color: #6d3636;
-    height: 800px;
-
-}
-/*
-.form-area{
-    position: relative;
-    min-width: 0px;
-    min-height: 5px;
-    background-color: aliceblue;
-    display: flex;
-    justify-content: center;
-    height: 200px;
-    z-index: 1;
-}
-
-.contacts{
-    display: flex;
-    justify-content: center;
-    position: relative;
-    width: 30%;
-    height: -50px;
-
 }
